hphp/test/zend/good/Zend/tests/bug27731.php
<?php
	error_reporting(E_ALL ^ E_NOTICE);
	@error_reporting(E_WARNING);
	var_dump(error_reporting());
?>