hphp/test/zend/bad/ext/phar/tests/001.php
<?php
var_dump(Phar::apiVersion());
?>
===DONE===